--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Portfolio - Profil</title>
+  <title>Portfolio - index</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -13,14 +13,14 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: navy;">
   <div class="container">
-    <a class="navbar-brand" href="Profil.html"><b>Amjad Nasser</b></a>
+    <a class="navbar-brand" href="index.html"><b>Amjad Nasser</b></a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="menu">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link active" href="Profil.html">Profil</a></li>
+        <li class="nav-item"><a class="nav-link active" href="index.html">index</a></li>
         <li class="nav-item"><a class="nav-link" href="experiences.html">Expériences</a></li>
         <li class="nav-item"><a class="nav-link" href="competences.html">Compétences</a></li>
         <li class="nav-item"><a class="nav-link" href="loisirs.html">Loisirs</a></li>
@@ -31,13 +31,13 @@
 
 <main>
   <section class="container">
-    <h1>Profil</h1>
+    <h1>index</h1>
       <div class="bloc">
      <div class="header img">
           
       <img src="image/m.png" alt="moi photo">
          
-    <div  align = "center" class="profil-titre">
+    <div  align = "center" class="index-titre">
       <span> Data Scientist</span>
     </div>
   </div>
@@ -87,3 +87,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
