--- a/experiences.html
+++ b/experiences.html
@@ -15,13 +15,13 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#0b3d91;">
   <div class="container">
-    <a class="navbar-brand" href="Profil.html"><b>Amjad Nasser</b></a>
+    <a class="navbar-brand" href="index.html"><b>Amjad Nasser</b></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="menu">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="Profil.html">Profil</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">index</a></li>
         <li class="nav-item"><a class="nav-link active" href="experiences.html">Expériences</a></li>
         <li class="nav-item"><a class="nav-link" href="competences.html">Compétences</a></li>
         <li class="nav-item"><a class="nav-link" href="loisirs.html">Loisirs</a></li>
@@ -107,3 +107,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
