--- a/competences.html
+++ b/competences.html
@@ -15,7 +15,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#0b3d91;">
   <div class="container">
-    <a class="navbar-brand" href="Profil.html">Amjad Nasser</a>
+    <a class="navbar-brand" href="index.html">Amjad Nasser</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
       <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
 
     <div class="collapse navbar-collapse" id="menu">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="Profil.html">Profil</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">index</a></li>
         <li class="nav-item"><a class="nav-link" href="experiences.html">Expériences</a></li>
         <li class="nav-item"><a class="nav-link active" href="competences.html">Compétences</a></li>
         <li class="nav-item"><a class="nav-link" href="loisirs.html">Loisirs</a></li>
@@ -139,3 +139,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
