--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </button>
     <div class="collapse navbar-collapse" id="menu">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link active" href="index.html">index</a></li>
+        <li class="nav-item"><a class="nav-link active" href="index.html">Profil</a></li>
         <li class="nav-item"><a class="nav-link" href="experiences.html">Expériences</a></li>
         <li class="nav-item"><a class="nav-link" href="competences.html">Compétences</a></li>
         <li class="nav-item"><a class="nav-link" href="loisirs.html">Loisirs</a></li>
@@ -87,5 +87,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
