--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <main>
   <section class="container">
-    <h1>index</h1>
+    <h1>Profil</h1>
       <div class="bloc">
      <div class="header img">
           
@@ -87,6 +87,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
