--- a/competences.html
+++ b/competences.html
@@ -23,7 +23,7 @@
 
     <div class="collapse navbar-collapse" id="menu">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">index</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Profil</a></li>
         <li class="nav-item"><a class="nav-link" href="experiences.html">Expériences</a></li>
         <li class="nav-item"><a class="nav-link active" href="competences.html">Compétences</a></li>
         <li class="nav-item"><a class="nav-link" href="loisirs.html">Loisirs</a></li>
@@ -139,4 +139,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
